appbar.html 구조 만들다.
appbar.html 구조와 css 기본을 구현했습니다.
이미지 리소스 등록했습니다.

--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@ body {
 li {
     list-style: none;
 }
+
+.search-button {
+    background: url(https://cdn.bmf.kr/web/common/ic_search.png) no-repeat center 0;
+}
