Added header-wrapper and mouse hovering
added header-wrapper, so the contents stay at the center 980 px.
added mouse hovering properties for a tag elements: color -> mint,
cursor -> pointer.

--- a/style.css
+++ b/style.css
@@ -10,12 +10,43 @@ ul {
     padding: 0 0 0 0;
 }
 
+a {
+	text-decoration: none;
+	color: #000000;
+}
+
 .header-wrapper {
+	display: flex;
     width: 980px;
     margin: auto;
 }
 
+.hover_link {
+
+}
+
+.hover-link:hover {
+	color: #25d4ce;
+    cursor: pointer;
+}
+
+.search-bar {
+	width: 100%;
+	height: 38px;
+}
+
+#search-field {
+	margin: auto;
+	height: 36px;
+	border: 1px solid;
+	padding: 0px;
+}
+
 .search-button {
+	margin: auto;
+	border: 1px solid black;
+	width: 38px;
+	height: 38px;
     background: url(https://cdn.bmf.kr/web/common/ic_search.png) no-repeat center 0;
 }
 
@@ -26,7 +57,7 @@ ul {
 }
 
 .app-download {
-    flex: 1;
+    flex: 2;
     text-align: left;
     display: flex;
 }
@@ -39,7 +70,7 @@ ul {
 .system-navigation {
     display: inline-block;
     float: right;
-    flex: 1;
+    flex: 5;
     text-align: right;
 }
 
@@ -63,7 +94,6 @@ ul {
 .header {
     margin: auto auto auto auto;
     height: 100px;
-    width: 100%;
     display: flex;
 }
 
@@ -91,6 +121,7 @@ ul {
 
 .menu-bar {
     height: 55px;
+    width: 100vw;
     display: flex;
     background-color: #483f35;
     color: #ffffff;
@@ -104,6 +135,11 @@ ul {
 }
 
 .menu-bar > ul > li {
+	width: 100%; 
+	height: 100%;
     flex: 1;
+}
+.menu-bar > ul > li > a {
+	color: #ffffff;
 }
 
