--- a/style.css
+++ b/style.css
@@ -87,8 +87,50 @@ header {
     margin-bottom: 25px;
 }
 
-.brand_shop {
-/*  브랜드관 배경색 변경 */
+main nav {
+    background-color: #483f35;
+    margin-bottom: 70px;
+}
+
+main nav ul {
+    list-style: none;
+    color: #ffffff;
+    margin: 0;
+    padding: 0 20px;
+    text-align: center;
+}
+
+main nav ul li {
+    display: inline-block;
+    padding: 20px 30px;
+    font-weight: bold;
+}
+
+#menu_container {
+    text-align: center;
+}
+
+.arrow {
+    background-image: url("./image/arrow.png");
+    position: relative;
+    width: 28px;
+    height: 52px;
+    overflow: hidden;
+    border: none;
+}
+
+#left_arrow {
+    background-position: 0 0;
+    left: -500px;
+}
+
+#right_arrow {
+    background-position: 30px 0;
+    right: -500px;
+}
+
+#brand_shop {
+    background-color: #362d25;
 }
 
 .food_image {
