Create autocomplete list window and Function
검색어에 따른 자동완성 리스트 DOM 및 기능 구현
키워드 하이라이팅 기능 구현
Rendering / Hovering 기능 추가

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ a {
 .search-bar {
 	width: 100%;
 	height: 38px;
+    position: relative;
 }
 
 #search-field {
@@ -143,3 +144,18 @@ a {
 	color: #ffffff;
 }
 
+.auto-complete-window {
+    height: auto;
+    width: 200px;
+    position: relative;
+    top: 0;
+    background: #84D4D0;
+}
+
+.auto-complete-list > li > span {
+    color: #D20052;
+}
+
+.auto-complete-list > li:hover {
+    background-color: #7B9F93;
+}
