--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
 #header {
     padding-top: 0px;
     padding-bottom: 0px;
+    min-width: 750px;
 }
 
 #header::after {
@@ -122,7 +123,6 @@ main nav ul li {
 
 .arrow {
     background-image: url("./image/arrow.png");
-    position: relative;
     width: 28px;
     height: 52px;
     overflow: hidden;
@@ -131,12 +131,12 @@ main nav ul li {
 
 #left_arrow {
     background-position: 0 0;
-    left: -500px;
+    margin-right: 30px;
 }
 
 #right_arrow {
     background-position: 30px 0;
-    right: -500px;
+    margin-left: 30px;
 }
 
 .menu {
@@ -144,6 +144,7 @@ main nav ul li {
     width: 215px;
     height: 350px;
     margin: 0 15px;
+    vertical-align: middle;
 }
 
 .menu .food_image {
