Fixed a minor bug
Changed keyboard event listener from 'keypress' to 'keydown'.
Added pointer type cursor to auto complete list mouse hovering.

--- a/style.css
+++ b/style.css
@@ -160,12 +160,9 @@ a {
 	background-color: #7B9F93;
 }
 
-
-
-.auto-complete-list > li:focus {
-    background-color: #7B9F93;
+.auto-complete-list > li {
+	cursor: pointer;
 }
-
 
 
 
