검색된 단어 강조함
자동완성으로 나온 리스트에서
검색한 단어를 하이라이트 처리함

--- a/style.css
+++ b/style.css
@@ -108,6 +108,11 @@ header {
     font-size: 20px;
 }
 
+.result_list ul li span {
+    color: red;
+    font-weight: bold;
+}
+
 .side_logo {
     float: right;
     margin-left: 50px;
