방향키 눌렀을 때 색상 전환 시도중
시도중 선수교체함

--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@ header {
     font-size: 20px;
 }
 
+.result_list ul .selected {
+    background-color: #FFFFFF;
+}
+
 .result_list ul li span {
     color: red;
     font-weight: bold;
