--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul {
 
 a {
 	text-decoration: none;
-	color: #000000;
+	color: #666;
 }
 
 .header-wrapper {
@@ -37,24 +37,28 @@ a {
 }
 
 #search-field {
-	margin: auto;
 	height: 36px;
-	border: 1px solid;
+	border: 1px solid #cfd0d2;
 	padding: 0px;
+	margin: 0 0 0 0;
+	float: left;
+	width: 210px;
 }
 
 .search-button {
-	margin: auto;
-	border: 1px solid black;
+	margin: auto 0 auto -38px;
 	width: 38px;
 	height: 38px;
+	border: none;
     background: url(https://cdn.bmf.kr/web/common/ic_search.png) no-repeat center 0;
 }
 
 .top-navigation {
     height: 40px;
     display: flex;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #E9E9E9;
+	font-size: 12px;
+	color: #d6d6d6;
 }
 
 .app-download {
@@ -100,10 +104,12 @@ a {
 
 .header > .logo {
     flex: 1;
+	margin: auto 30px auto 0;
 }
 
 .header > .search-bar {
     flex: 3;
+	margin: auto 0 auto 0;
 }
 
 .header > .quick-link {
@@ -118,6 +124,8 @@ a {
 
 .quick-link > ul > li {
     flex: 1;
+	text-align: right;
+	margin: auto 0;
 }
 
 .menu-bar {
@@ -131,24 +139,31 @@ a {
 }
 
 .menu-bar > ul{
-    margin: auto auto auto auto;
     display: flex;
+	height: 100%;
+}
+
+.brand {
+	background-color: #29221c;
 }
 
 .menu-bar > ul > li {
-	width: 100%; 
+	width: 100%;
 	height: 100%;
     flex: 1;
+	line-height: 55px;
 }
 .menu-bar > ul > li > a {
+	margin: auto;
 	color: #ffffff;
+	font-weight: bold;
 }
 
 .auto-complete-window {
     height: auto;
-    width: 200px;
+    width: 212px;
     position: relative;
-    top: 0;
+    top: -18px;
     background: #84D4D0;
 }
 
@@ -169,11 +184,11 @@ a {
 }
 
 .side-dish {
-	position: relative;
 	height: 420px;
+	display: block;
 }
 
-.side-dish > img {
+.side-dish-title > img {
 	width: 324px;
 	height: 64px;
 	margin: auto;
@@ -182,6 +197,9 @@ a {
 .side-dish-title {
 	position: relative;
 	width: 980px;
+	margin: auto;
+	text-align: center;
+	margin: 50px 0;
 }
 
 .slider {
@@ -198,7 +216,7 @@ a {
 	height: 215px;
 	border-radius: 50%;
 	overflow: hidden;
-	flex: 1;
+	margin: auto;
 }
 
 .thumb-imgs > li > img {
