--- a/style.css
+++ b/style.css
@@ -175,6 +175,23 @@ main nav ul li {
     margin-left: 30px;
 }
 
+.menu_view {
+    display: inline-block;
+    height: 350px;
+    width: 980px;
+    margin: 0;
+    padding: 0;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.menu_view .menu_slider {
+    margin: 0;
+    padding: 0;
+    width: 2000px;
+    text-align: center;
+}
+
 .menu {
     display: inline-block;
     width: 215px;
