--- a/style.css
+++ b/style.css
@@ -205,10 +205,10 @@ main nav ul li {
     display: inline-block;
 }
 
-.menu_slider:hover {
+/*.menu_slider:hover {
     transition: transform 0.5s ease-in-out;
     transform: translate3d(-2940px, 0px, 0px);
-}
+}*/
 
 .menu .food_image {
     width: 215px;
